export const snapshot = {};

snapshot[`Issue Link Command - Help Text 1`] = `
stdout:
'
Usage: link <issue> <url>

Writes: true

Description:

  Link a URL to an issue by UUID, identifier (e.g. ENG-123), number in the configured team, or Linear URL

Options:

  -h, --help            - Show this help.                                 
  --json                - Output a JSON write result with the attachment  
  -t, --title  <title>  - Custom title for the link                       

Examples:

  Link a URL to a specific issue linear issue link ENG-123 https://github.com/org/repo/pull/123    
  Link with a custom title       linear issue link ENG-123 https://example.com --title "Design doc"

'
stderr:
""
`;

snapshot[`Issue Link Command - link URL to issue 1`] = `
stdout:
"✓ Linked to ENG-123: org/repo#42
"
stderr:
""
`;

snapshot[`Issue Link Command - link URL with custom title 1`] = `
stdout:
"✓ Linked to ENG-456: Design document
"
stderr:
""
`;

snapshot[`Issue Link Command - invalid URL shows error 1`] = `
stdout:
""
stderr:
"✗ Failed to link URL: Invalid URL: 'not-a-url'
  Provide a URL starting with http:// or https://.
"
`;

snapshot[`Issue Link Command - issue not found 1`] = `
stdout:
""
stderr:
"✗ Failed to link URL: Issue not found: ENG-999
"
`;

snapshot[`Issue Link Command - JSON preserves attachment receipt 1`] = `
stdout:
'{
  "ok": true,
  "effect": "applied",
  "data": {
    "attachment": {
      "id": "attachment-receipt",
      "title": "Proof",
      "url": "https://example.com/proof",
      "issue": {
        "id": "issue-uuid-123"
      }
    }
  }
}
'
stderr:
""
`;
